# soft-computing-final

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-web.yml  codeql.yml
ai_engine/: .dockerignore  .env.example  Dockerfile  README.md  inference.py  main.py  pyproject.toml
ai_train/: README.md  desain_instagram_criteria.md  main.py  pyproject.toml
ai_train/artifacts/: best_hyperparameters.json
ai_train/notebook/: main.ipynb
artifacts/: best_hyperparameters.json
notebook/: main.ipynb
web/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/.husky/: pre-commit
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/engagement/predict/: route.ts
web/src/app/api/examples/: route.ts
web/src/app/api/examples/[slug]/: route.ts
web/src/components/engagement/: engagement-api.ts  engagement-workspace.tsx  index.ts  page-header.tsx  preview-panel.tsx  result-badge.tsx  result-panel.tsx  upload-section.tsx  warning-card.tsx
web/src/components/ui/: button.tsx  engagement.tsx  index.ts
web/src/lib/api-helper/: api-wrapper.ts  error.ts
web/src/lib/auth/: auth-api-helper.ts  auth-page-helper.ts
