[project]
name = "ai-engine"
version = "0.1.0"
description = "FastAPI inference service for the Soft Computing final project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.20",
    "scikit-fuzzy>=0.5.0",
    "tensorflow>=2.21.0",
    "uvicorn[standard]>=0.35.0",
    "scipy>=1.17.1",
    "networkx>=3.6.1",
]
