[project]
name = "soft-computing-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pygad>=3.6.0",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.21.0; sys_platform == 'linux'",
    "tensorflow>=2.21.0; sys_platform == 'win32'",
]
